syntax = "proto3";

package pb;

option go_package = "ohdada/g2gserver/internal/pkg/pb";

message Player {
  string id = 1;
  int64 sn = 2;
  string name = 3;
  string display_name = 4;
  string platform = 5;
  int64 credit = 6;
  double balance = 7;
  string picture = 8;
  string access_token = 9;
  int64 score = 10;
  string icon = 11;
}